# fnv-audio-fix

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/fnv_audio_fix/: __init__.py  bsa.py  cli.py  converter.py  fixer.py  game_path.py  logger.py
tests/: test_bsa.py  test_cli.py  test_converter.py  test_fixer.py  test_game_path.py
