[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fnv-audio-fix"
version = "1.0.0"
description = "Fix audio crackling in Fallout: New Vegas by converting MP3/OGG to WAV"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "fnv-audio-fix contributors" },
]
keywords = ["fallout", "new-vegas", "audio", "fix", "crackling", "modding"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
fnv-audio-fix = "fnv_audio_fix.cli:main"

[project.urls]
Homepage = "https://github.com/mikemadest/fnv-audio-fix"
Repository = "https://github.com/mikemadest/fnv-audio-fix"
Issues = "https://github.com/mikemadest/fnv-audio-fix/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
